Modifying code because concept.csv changed case fields